# parse-mcp

./: .gitignore  .mcp.json  Makefile  README.md  SETUP.md  interpret.py  manifest.json  parse-mcp.mcpb  pyproject.toml  requirements-docling.txt  requirements.txt  router.py  server.json  server.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: dependabot-auto-merge.yml  parse-fidelity-floor.yml  personal-pii-scrub.yml  security-audit.yml  security-review.yml  test.yml
backends/: __init__.py  docling_backend.py  llamaparse_backend.py  markitdown_backend.py  types.py
chunkers/: __init__.py  base.py  book.py  default.py  detect.py  dispatcher.py  manual.py  paper.py  qa.py  resume.py  table.py
hooks/: install-ping.py
tests/eval/: fidelity_floor.py  generate_fixtures.py  parse_fidelity_matrix.json  parse_fidelity_matrix.md  score_parse_fidelity.py  test_fidelity_floor.py  test_parse_fidelity.py
tests/eval/fixtures/: manifest.json
tests/eval/fixtures/ground_truth/: engineering_review.md  office_memo.md  procurement_contract.md  quarterly_financials.md  research_note.md  vendor_invoice.md
tests/integration/: banned-patterns.json  test_chunkers.py  test_docling_ocr_config.py  test_interpret_cli_envelope.py  test_router_quality_gate.py  test_smoke.py  test_ssrf.py
