[project]
name = "parse-mcp"
version = "0.1.0"
description = "One MCP, many parsers. Routes between markitdown, Docling, and LlamaParse. Plus an interpret tool that pipes parsed markdown into Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Adelaida Diaz-Roa" }]
dependencies = [
    "fastmcp>=3.2.3",
    "anthropic>=0.40",
    "markitdown[pdf,docx,pptx,xlsx]>=0.0.1",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]
llamaparse = ["llama-cloud-services>=0.6"]

[project.scripts]
parse-mcp = "server:mcp.run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
